--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <div class="container">
+    <div class="logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Facebook_Logo_%282019%29.svg/1024px-Facebook_Logo_%282019%29.svg.png" alt="Facebook Logo">
+      <p>Facebook helps you connect and share with the people in your life</p>
+    </div>
+		  <div class="right">
+		    <form>
+      <input type="text" placeholder="Email or Phone Number">
+      <input type="password" placeholder="Password">
+      <button type="submit">Log in</button>
+      <a href="#" class="forgot-link">Forgotten account?</a>
+    </form>
+			  <p class=line ></p>
+    <div class="create-account">
+      <p>Don't have an account? <a href="#">Create new account</a></p>
+    </div>	  
+		  </div>
+
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
