--- a/main.html
+++ b/main.html
@@ -21,9 +21,7 @@
       <a href="#" class="forgot-link">Forgotten account?</a>
     </form>
 			  <p class=line ></p>
-    <div class="create-account">
-      <p>Don't have an account? <a href="#">Create new account</a></p>
-    </div>	  
+  <button class="new">Create new account</button>  
 		  </div>
 
   </div>
